[gd_scene load_steps=16 format=2]

[ext_resource path="res://Tablero/Parqu√©s.png" type="Texture" id=1]
[ext_resource path="res://Dados/Dado.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tablero/Tablero.gd" type="Script" id=3]
[ext_resource path="res://Ficha/Ficha.tscn" type="PackedScene" id=4]
[ext_resource path="res://Ficha/FichaRoja.png" type="Texture" id=6]
[ext_resource path="res://Tablero/GameMaster.gd" type="Script" id=7]
[ext_resource path="res://Tablero/Jugador.gd" type="Script" id=8]
[ext_resource path="res://Ficha/FichaAzul.png" type="Texture" id=9]
[ext_resource path="res://Ficha/FichaVerde.png" type="Texture" id=10]
[ext_resource path="res://Ficha/FichaC2.gd" type="Script" id=11]
[ext_resource path="res://Ficha/FichaC3.gd" type="Script" id=12]
[ext_resource path="res://Ficha/FichaC4.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.5, 46 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 56.5, 14 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 56, 14 )

[node name="Tablero" type="Node2D"]
script = ExtResource( 3 )

[node name="Fondo" type="Sprite" parent="."]
position = Vector2( -1.90735e-06, 0 )
scale = Vector2( 0.477427, 0.383183 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( 2.0945, 0 )

[node name="Dado1" parent="." groups=["dado1"] instance=ExtResource( 2 )]
position = Vector2( 851, 50 )
scale = Vector2( 0.27, 0.27 )
centered = false
offset = Vector2( -1.49536, -160 )

[node name="Dado2" parent="." groups=["dado2"] instance=ExtResource( 2 )]
position = Vector2( 936, 50 )
scale = Vector2( 0.27, 0.27 )
centered = false
offset = Vector2( -1.49536, -160 )

[node name="Button" type="Button" parent="."]
margin_left = 887.0
margin_top = 100.0
margin_right = 984.0
margin_bottom = 120.0
text = "Lanzar Dados"

[node name="FichaC11" type="Position2D" parent="."]
position = Vector2( 64, 546 )
rotation = -6.28319

[node name="ficha" parent="FichaC11" groups=["fichaC11"] instance=ExtResource( 4 )]
position = Vector2( 0, -20 )
scale = Vector2( 0.133301, 0.135254 )

[node name="MovimientoC11" type="Tween" parent="FichaC11"]

[node name="FichaC21" type="Position2D" parent="."]
position = Vector2( 268, 200 )

[node name="ficha" parent="FichaC21" groups=["fichaC11"] instance=ExtResource( 4 )]
position = Vector2( 44, 310 )
scale = Vector2( 0.133301, 0.135254 )
texture = ExtResource( 6 )
script = ExtResource( 11 )

[node name="MovimientoC21" type="Tween" parent="FichaC21"]

[node name="FichaC22" type="Position2D" parent="."]
position = Vector2( 166, 435 )

[node name="ficha" parent="FichaC22" groups=["fichaC11"] instance=ExtResource( 4 )]
position = Vector2( 0, -20 )
scale = Vector2( 0.133301, 0.135254 )
texture = ExtResource( 6 )
script = ExtResource( 11 )

[node name="MovimientoC21" type="Tween" parent="FichaC22"]

[node name="Casilla1" type="Position2D" parent="."]
position = Vector2( 166, 435 )

[node name="Area2D" type="Area2D" parent="Casilla1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Casilla1/Area2D"]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="Casilla2" type="Position2D" parent="."]
position = Vector2( 200, 432 )

[node name="Area2D" type="Area2D" parent="Casilla2"]
position = Vector2( -1, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Casilla2/Area2D"]
polygon = PoolVector2Array( -16, 46, 3, 48, 29, -41, -17, -45 )

[node name="Casilla3" type="Position2D" parent="."]
position = Vector2( 234, 440 )

[node name="Area2D" type="Area2D" parent="Casilla3"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Casilla3/Area2D"]
polygon = PoolVector2Array( -32, 40, -13, 45, 49, -36, -5, -50 )

[node name="Casilla4" type="Position2D" parent="."]
position = Vector2( 268, 451 )

[node name="Area2D" type="Area2D" parent="Casilla4"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Casilla4/Area2D"]
polygon = PoolVector2Array( -47, 34, -30, 45, 56, -24, 15, -47, -1.23581, -25.7887 )

[node name="Casilla5" type="Position2D" parent="."]
position = Vector2( 288, 471 )

[node name="Area2D" type="Area2D" parent="Casilla5"]
position = Vector2( 0, 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Casilla5/Area2D"]
polygon = PoolVector2Array( -50, 22, -40, 35, 60, -16, 34, -44 )

[node name="Casilla6" type="Position2D" parent="."]
position = Vector2( 306, 495 )

[node name="Area2D" type="Area2D" parent="Casilla6"]
position = Vector2( 0, -1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Casilla6/Area2D"]
polygon = PoolVector2Array( -58, 13, -53, 25, 59, 5, 41, -39 )

[node name="Casilla7" type="Position2D" parent="."]
position = Vector2( 312, 524 )

[node name="Area2D" type="Area2D" parent="Casilla7"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Casilla7/Area2D"]
polygon = PoolVector2Array( -59, -5, -57, 11, 57, 11, 52, -25 )

[node name="Casilla8" type="Position2D" parent="."]
position = Vector2( 312, 551 )

[node name="Area2D" type="Area2D" parent="Casilla8"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Casilla8/Area2D"]
position = Vector2( 0.5, -1 )
shape = SubResource( 2 )

[node name="Casilla9" type="Position2D" parent="."]
position = Vector2( 313, 579 )

[node name="Area2D" type="Area2D" parent="Casilla9"]
position = Vector2( 4, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Casilla9/Area2D"]
position = Vector2( -4, -1 )
shape = SubResource( 3 )

[node name="Casilla10" type="Position2D" parent="."]
position = Vector2( 313, 607 )

[node name="Area2D" type="Area2D" parent="Casilla10"]
position = Vector2( 7, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Casilla10/Area2D"]
position = Vector2( -8, -6 )
shape = SubResource( 3 )

[node name="Casilla11" type="Position2D" parent="."]
position = Vector2( 313, 636 )

[node name="Area2D" type="Area2D" parent="Casilla11"]
position = Vector2( 7, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Casilla11/Area2D"]
position = Vector2( -9, -8 )
shape = SubResource( 3 )

[node name="Casilla12" type="Position2D" parent="."]
position = Vector2( 312, 661 )

[node name="Area2D" type="Area2D" parent="Casilla12"]
position = Vector2( 7, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Casilla12/Area2D"]
position = Vector2( -6, -5 )
shape = SubResource( 3 )

[node name="Casa21" type="Position2D" parent="."]
position = Vector2( 178, 142 )

[node name="Casa22" type="Position2D" parent="."]
position = Vector2( 64, 146 )

[node name="GameMaster" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Jugador" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Casilla13" type="Position2D" parent="."]
position = Vector2( 423, 663 )

[node name="Area2D" type="Area2D" parent="Casilla13"]
position = Vector2( 7, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Casilla13/Area2D"]
position = Vector2( -5, -6 )
shape = SubResource( 3 )

[node name="Casilla14" type="Position2D" parent="."]
position = Vector2( 539, 663 )

[node name="Area2D" type="Area2D" parent="Casilla14"]
position = Vector2( 7, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Casilla14/Area2D"]
position = Vector2( -7, -7 )
shape = SubResource( 3 )

[node name="Casilla15" type="Position2D" parent="."]
position = Vector2( 540, 634 )

[node name="Area2D" type="Area2D" parent="Casilla15"]
position = Vector2( 7, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Casilla15/Area2D"]
position = Vector2( -8, -7 )
shape = SubResource( 3 )

[node name="Casilla16" type="Position2D" parent="."]
position = Vector2( 540, 605 )

[node name="Area2D" type="Area2D" parent="Casilla16"]
position = Vector2( 7, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Casilla16/Area2D"]
position = Vector2( -8, -5 )
shape = SubResource( 3 )

[node name="Casilla17" type="Position2D" parent="."]
position = Vector2( 541, 578 )

[node name="Area2D" type="Area2D" parent="Casilla17"]
position = Vector2( 7, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Casilla17/Area2D"]
position = Vector2( -9, -7 )
shape = SubResource( 3 )

[node name="Casilla18" type="Position2D" parent="."]
position = Vector2( 541, 551 )

[node name="Area2D" type="Area2D" parent="Casilla18"]
position = Vector2( 7, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Casilla18/Area2D"]
position = Vector2( -10, -7 )
shape = SubResource( 3 )

[node name="FichaC31" type="Position2D" parent="."]
position = Vector2( 166, 435 )
rotation = -6.28319

[node name="ficha" parent="FichaC31" groups=["fichaC11"] instance=ExtResource( 4 )]
position = Vector2( 0, -4 )
scale = Vector2( 0.133301, 0.135254 )
texture = ExtResource( 9 )
script = ExtResource( 12 )

[node name="MovimientoC11" type="Tween" parent="FichaC31"]

[node name="FichaC41" type="Position2D" parent="."]
position = Vector2( 539, 663 )
rotation = -6.28319

[node name="ficha" parent="FichaC41" groups=["fichaC11"] instance=ExtResource( 4 )]
position = Vector2( 2.00024, -16 )
scale = Vector2( 0.133301, 0.135254 )
texture = ExtResource( 10 )
script = ExtResource( 13 )

[node name="MovimientoC11" type="Tween" parent="FichaC41"]

[node name="Casa31" type="Position2D" parent="."]
position = Vector2( 689, 551 )

[node name="Casa41" type="Position2D" parent="."]
position = Vector2( 681, 140 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
